# Robotics

./: Ponto.py  README.md  environment.txt  main.py  malha.slx  mapping.py  route.txt  teste.py
DCMotor/: DcMotor.py  kp_taup.py  plotter.py  t.py  teste.py
DCMotor/OO/: feedback.py  main.py  pidController.py  plant.py
Grid + PRM/: Ponto.py  READme.md  environment.txt  main.py  mapping.py
Grid + PRM/classes/: PRMController.py
OG/: occupancyGrid.m
OG + rota/: occupancyGrid.m
classes/: PRMController.py
devel/: .catkin  .rosinstall
devel/lib/pkgconfig/: simu.pc  simulation.pc  turtlebot3_description.pc
devel/lib/simu/: calcRefTraj.py  control.py  costFunction.py  nmpc.py
devel/share/simu/cmake/: simuConfig.cmake
devel/share/simulation/cmake/: simulationConfig.cmake
devel/share/turtlebot3_description/cmake/: turtlebot3_descriptionConfig.cmake
src/simu/: CMakeLists.txt  package.xml
src/simu/launch/: spawn.launch
src/simu/mapa/: coords1.txt  route.txt
src/simu/models/mapa/: model.config  model.sdf
src/simu/scripts/: control.py  laser_values.py  monte_carlo.py
src/simu/scripts/PRM/: PRMController.py  Utils.py  mapping.py  prm.py
src/simu/scripts/nmpc/: diffAngle.py
src/simu/urdf/: robot.urdf.xacro
src/simu/urdf/robot_parts/: carcaca.xacro  omni_wheel.xacro  piston.xacro  traction_wheel.xacro  tray.xacro
src/simu/urdf/sensors/: camera.xacro  lidar.xacro  rplidar.xacro
src/simu/world/: mapa.world
src/turtlebot3_description/urdf/: turtlebot3_waffle.gazebo.xacro
